--- a/css/UserCard.css
+++ b/css/UserCard.css
@@ -1,10 +1,20 @@
 .header{
-    background-color: #9fa0a1 !important    
+    background-color: #9fa0a1 !important;    
+}
+.iconHeader{
+    font-size:10px;
+    color:black;
+    background-color:#d5d6d6 !important;
+    margin:1px;
+    border-radius:3px;
+    /* box-shadow: inset 0px 0px 0px 1px #E9E9E9; */
+
+
 }
 /* ######### content ########################### */
 .content{
     min-height:500px;
-    background-color:rgb(219, 230, 231);
+    background-color:white;
 }
 .content1{
     min-height:1000px;
@@ -13,33 +23,39 @@
     margin:1%;
 }
 .cont1div1{
-    background-color:rgb(204, 193, 195);
+    background-color:rgb(250, 250, 250);
     border: 1px solid black;
     min-height:200px;
     padding:10px;
-    margin: 2%;
+    margin: 1%;
     border-radius: 3px;
     border-color:white;
+    box-shadow: inset 0px 0px 0px 1px #E9E9E9;
 }
 .cont1div2{
     background-color:rgba(113, 90, 200, 0.1) !important;
     color:#715ac8 !important;
     border: 1px solid black;
-    min-height:100px;
+    height:auto;
     padding:10px;
-    margin: 2%;
+    margin: 1%;
     border-radius: 5px;
     border-color:white;
+    box-shadow: inset 0px 0px 0px 1px #E9E9E9;
 }
 .cont1div3{
-    background-color:#afaeb3 !important;
-    border: 1px solid black;
+    background-color:rgb(250, 250,250);
+    border: 1px solid black; 
     min-height:200px;
     padding:10px;
-    margin: 2%;
+    margin: 1%;
     border-radius: 5px;
     border-color:white;
+    box-shadow: inset 0px 0px 0px 1px #E9E9E9;
    
+}
+.cont1div3MarginTop{
+    margin-top:20px;
 }
 .icon1{
     font-size:'40px';
@@ -71,6 +87,10 @@ border-radius: 5px;
     float:right;
     margin:2%;
 }
+.floatLeft{
+    float:left;
+}
+
 
 
 /* ################## footer #################### */
