--- a/css/product3.css
+++ b/css/product3.css
@@ -26,6 +26,7 @@
 }
 .product3_text{
     color:white;
+    text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.5);
 }
 .product3button{
     background-color:rgb(192, 183, 183);
