--- a/css/Page12.css
+++ b/css/Page12.css
@@ -4,3 +4,14 @@
     height: 80px;
     
 }
+.in2{
+    height:40px;
+}
+.row{
+    margin-top:10px;
+    margin-bottom:10px;
+}
+.p12text{
+    text-align:left;
+    float:left;
+}
