--- a/css/Page16_17.css
+++ b/css/Page16_17.css
@@ -37,37 +37,57 @@
     margin-bottom:5px;
     margin-right:5px;
 }
+.p17icon3{
+    font-size:20px;
+    color:rgb(156, 148, 148);
+    /* vertical-align:baseline; */
+    margin-top:5px;
+    margin-bottom:5px;
+    margin-right:5px;
+}
 .p17div4{
     background-color:#FFFFFF;
 }
 .p17div5{
-    background-color:rgb(177, 165, 165);
+    background-color:rgb(241, 235, 235);
 }
 .p17div6{
-    background-color:rgb(150, 128, 128);
+    background-color:rgb(241, 245, 245);
 }
 .p17div7{
-    background-color:rgb(97, 90, 90);
+    background-color:rgb(241, 235, 235);
 }
 .p17div8{
     background-color:rgb(233, 227, 227);
-    border:1px solid rgb(160, 156, 156);
+    
+    margin-bottom:50px;
+    box-shadow: 3px 3px rgb(196, 191, 191);
 }
 .p17div9{
     background-color:rgb(233, 227, 227);
-    border:1px solid rgb(160, 156, 156);
     min-height: 150px;
+    box-shadow: 3px 3px rgb(196, 191, 191);
     
 }
 .p17div10{
     background-color:rgb(233, 227, 227);
     border:1px solid rgb(211, 208, 208);
     min-height: 150px;
+    box-shadow: 3px 3px rgb(196, 191, 191);
 }
 .p17div11{
     height:100px;
     background-color:rgb(233, 227, 227);
-    border:1px solid rgb(160, 156, 156);
+    box-shadow: 3px 3px rgb(196, 191, 191);
+}
+.p17div12{
+    height:100px;
+    min-height: 100px;
+    background-color:rgb(233, 227, 227);
+    margin-bottom:50px;
+    padding-bottom:10px;
+    box-shadow: 3px 3px rgb(196, 191, 191);
+
 }
 
 /* styling text ######################## */
@@ -90,6 +110,7 @@
 .p17txt3{
     float:left;
     margin-top:5px;
+    margin-left:10px
 }
 .p17txt4{
     color: #333333 !important;
@@ -98,8 +119,35 @@
     font-size: 24px;
     margin-top: 1rem !important;
     font:bold;
-    float:left
-
+    float:left;
+    margin-left:10px
 }
+.p17txt5{
+    font-size: 0.85em;
+    font-style: italic;
+    color: #6f6f6f;
+    vertical-align:baseline;
+    text-align:left;
+}
+.p17txt6{
+    font-size: 1.2em !important;
+    line-height: 1.2em;
+    vertical-align: baseline;
+    color: #2e3d4f;
+    text-align:left;
+}
+/* Table page 17 MODLES */
+.ant-table-bordered .ant-table-tbody > tr > td{
+    background-color:grey;
+}
+.ant-table-thead > tr {
+    background: #a0b39e;
+  }
+  /* .ant-table-tbody > tr:hover:not(.ant-table-expanded-row) > td {
+    background: #289cd1;
+  } */
+  .ant-table-tbody > tr:nth-child(even) {
+    background-color: #f2f2f2;
+  }
 
 
