--- a/css/Page18.css
+++ b/css/Page18.css
@@ -17,6 +17,27 @@
 .p18applicationsText{
     float:left;
 }
+.p18smallBox{
+    position:absolute;
+    top:10px;
+    height:auto;
+    min-height:10px;
+    width:30%;
+    border:1px solid rgb(231, 222, 222);
+    background-color:#cee8f7;
+    font-size: 0.9em;
+    font-style: italic;
+    line-height: 20px;
+    box-shadow: inset 0px 0px 0px 1px #cfd8e3, 1px 2px 0px 2px rgba(0, 0, 0, 0.02) !important;
+    padding: 4px 9px 3px 6px;
+    border-radius: 5px;
+    z-index: 2;
+    left: 5px;
+    color: #0773b3;
+    text-shadow: 0px 1px 0px #FFFFFF;
+    vertical-align: text-bottom;
+    box-shadow: inset 0px 0px 0px 1px #a2d3f0, 1px 2px 0px 2px rgba(0, 0, 0, 0.02) !important;
+}
 
 /* ########## Page18_Product styling */
 
@@ -40,3 +61,45 @@
     font-size:15px;
     text-align:center;
 }
+/* ########## page 19 */
+.text2{
+    /* text used for header >> main text  */
+    float: left;
+    color:black;
+    font-size:20px;
+    text-align:center;
+
+}
+.p19_table{
+    padding:20px;
+    height:auto;
+    vertical-align:top;
+}
+.p19_table td{
+    color:black;
+    background-color:white;
+}
+.p19_table thead > tr > th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: rgb(169, 175, 169);
+    color: rgb(12, 9, 9);
+  }
+
+
+/* .p19_table tr:nth-child(even){background-color: #918888;}
+.p19_table tr:nth-child(odd){background-color: #6d3737;}
+
+
+tbody tr:nth-child(odd){
+    background-color: #d17474;
+    transition: all 0.3s, border 0s;
+}
+.p19_table tbody tr:nth-child(odd){
+    background-color: #3e947a;
+    transition: all 0.3s, border 0s;
+} */
+/* .p19_table row{
+    background-color: #d17474;
+} */
