--- a/css/Page18.css
+++ b/css/Page18.css
@@ -54,6 +54,19 @@
 .p18p_icon:hover{
     opacity:1.0
 }
+.p18p_icon2{
+    border: 1px solid grey;
+    width: auto;
+    height: auto;
+    background-color: #F7F7F7;
+    border-radius:3px;
+    margin:2px;
+    opacity:0.5;
+    padding:5px;
+}
+.p18p_icon2:hover{
+    opacity:1.0
+}
 .text1{
     float: left;
     /* font-weight:bold; */
