--- a/css/Page23.css
+++ b/css/Page23.css
@@ -15,17 +15,20 @@
 }
 .div23_subComponent{
     max-width:150px;
-    height:175px;
+    height:195px;
     margin:2px;
     background-color: #f1f1f1;
     border: 1px solid #afafaf;
     float:'left'
 }
 .div23_SBLogo{
-    width:150px;
+    width:100%;
     height:75px;
     background-color:rgb(131, 126, 122);
     padding:5px;
+    /* background-image:url('Logos/Logo2.png'); */
+    background-repeat: no-repeat;
+    background-size: 150px 80px;
 }
 
 /* text */
@@ -59,6 +62,12 @@
     color: #2e3d4f !important;
     float:left; 
     margin-left:20px
+}
+.txt23_4{
+    color: rgb(223, 48, 48)
+}
+.txt23_5{
+    color:rgb(76, 112, 21)
 }
 
 /* icons */
